<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.GymMembersDetailedInfoActivity">

    <TextView
        android:id="@+id/detailed_gym_member_details_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/member_details_text"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/detailed_gym_member_id_textview"
        />

    <TextView
        android:id="@+id/detailed_gym_member_id_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/gym_member_id_text"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/detailed_gym_member_details_textview"
        app:layout_constraintBottom_toTopOf="@id/detailed_gym_member_name_textview"
        />

    <TextView
        android:id="@+id/detailed_gym_member_name_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/gym_member_name_text"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/detailed_gym_member_id_textview"
        app:layout_constraintBottom_toTopOf="@id/detailed_gym_member_plan_textview"
        />

    <TextView
        android:id="@+id/detailed_gym_member_plan_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/gym_member_plan_text"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/detailed_gym_member_name_textview"
        />

</androidx.constraintlayout.widget.ConstraintLayout>